--- a/public/name.html
+++ b/public/name.html
@@ -11,7 +11,7 @@
 
     <title>Hello, world!</title>
     <style>
-        body{
+        #header-row{
             background-image: url("assets/images/maroon.png");
         }
     </style>
@@ -19,27 +19,9 @@
 
 <body>
     <div class="container-fluid text-center">
-        <div class="row">
+        <div class="row" id="header-row">
             <div class="col">
-                <img class="image-fluid" src="assets/images/top-splash.png" alt="Reversi logo" /> 
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <a href="name.html" class="btn btn-lg btn-primary">Let's Play</a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-            <img class="image-fluid" src="assets/images/bottom-splash.png" alt="Reversi logo two" />
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <a href="about.html" class="btn btn-lg btn-info">About</a>
-            </div>
-            <div class="col">
-                <a href="https://en.wikipedia.org/wiki/Reversi" class="btn btn-lg btn-info">Rules</a>
+                <h2>This is the name page</h2>
             </div>
         </div>
     </div>
