--- a/public/lobby.html
+++ b/public/lobby.html
@@ -25,10 +25,22 @@
             </div>
         </div>
         <div class='row'>
-            <div class='col'>
+            <div class='col text-left'>
                 <h3>Messages</h3>
                 <div id='messages'>
                  </div>
+            </div>
+        </div>
+         <div class='row'>
+            <div class='col'>
+                <form onsubmit='send_message(); return false;'>
+                    
+                    <div class='form-group'>
+                        <label for='send_message_holder' class='col-form-label sr-only'>Enter your chat message</label>
+                        <input class='form-control' type='text' value='' id='send_message_holder' placeholder="Enter your chat message" autocomplete="off">
+                    </div>
+                    <button type='submit' class='btn btn-default btn-primary'>Send</button>
+                </form>
             </div>
         </div>
 
