--- a/public/game.html
+++ b/public/game.html
@@ -26,8 +26,8 @@
         <div class='row'>
             <div class='col'>
                 <span class='align-middle' id='whitesum'></span>
-                <img src='assets/images/empty_to_white.gif' alt='white score'>
-                <img src='assets/images/empty_to_black.gif' alt='black score'>
+                <img src='assets/images/token2.png' alt='white score'>
+                <img src='assets/images/token10.png' alt='black score'>
                 <span class='align-middle' id='blacksum'></span>
 
             </div>
