--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="row">
             <div class="col">
-                <a href="name.html" class="btn btn-lg btn-primary">Let's Play</a>
+                <a href="name.html" class="btn btn-lg btn-primary">Let's Play!</a>
             </div>
         </div>
         <div class="row">
